src/log.txt
In file included from map.hpp:7:0,
                 from playstate.hpp:4,
                 from app.cpp:9:
taskqueue.hpp: In member function ‘void TaskQueue::Task<F>::dispatch()’:
taskqueue.hpp:68:13: error: ‘invoke’ is not a member of ‘std’
             std::invoke(Func);
             ^~~
In file included from map.hpp:7:0,
                 from map.cpp:1:
taskqueue.hpp: In member function ‘void TaskQueue::Task<F>::dispatch()’:
taskqueue.hpp:68:13: error: ‘invoke’ is not a member of ‘std’
             std::invoke(Func);
             ^~~
In file included from physbox.hpp:5:0,
                 from physbox.cpp:1:
physics.hpp:6:25: fatal error: box2d/Box2D.h: Datei oder Verzeichnis nicht gefunden
 #include <box2d/Box2D.h>
                         ^
compilation terminated.
physics.cpp:1:9: warning: #pragma once in main file
 #pragma once
         ^~~~
In file included from physics.cpp:2:0:
physics.hpp:6:25: fatal error: box2d/Box2D.h: Datei oder Verzeichnis nicht gefunden
 #include <box2d/Box2D.h>
                         ^
compilation terminated.
In file included from map.hpp:7:0,
                 from player.hpp:7,
                 from player.cpp:1:
taskqueue.hpp: In member function ‘void TaskQueue::Task<F>::dispatch()’:
taskqueue.hpp:68:13: error: ‘invoke’ is not a member of ‘std’
             std::invoke(Func);
             ^~~
In file included from map.hpp:7:0,
                 from playstate.hpp:4,
                 from playstate.cpp:1:
taskqueue.hpp: In member function ‘void TaskQueue::Task<F>::dispatch()’:
taskqueue.hpp:68:13: error: ‘invoke’ is not a member of ‘std’
             std::invoke(Func);
             ^~~
